--- a/YouBest/YouBest.storyboard
+++ b/YouBest/YouBest.storyboard
@@ -101,6 +101,7 @@
                     <connections>
                         <segue destination="yW6-1q-jsq" kind="relationship" relationship="viewControllers" id="OeI-MZ-nXz"/>
                         <segue destination="eDS-Fl-Tn5" kind="relationship" relationship="viewControllers" id="meE-Jj-Ofg"/>
+                        <segue destination="Xhg-7t-dfF" kind="relationship" relationship="viewControllers" id="yMa-VR-q6i"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qhC-dM-PyS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -135,6 +136,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dj3-sY-0ag" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="877" y="411"/>
+        </scene>
+        <!--Wishes View Controller - 愿望-->
+        <scene sceneID="7OH-dw-2Rt">
+            <objects>
+                <tableViewController storyboardIdentifier="GiftsViewController" id="Xhg-7t-dfF" customClass="WishesViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="4sK-i0-Osx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="3Hs-yl-GgB">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3Hs-yl-GgB" id="n3h-GS-Rsc">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Xhg-7t-dfF" id="lt9-kI-qiH"/>
+                            <outlet property="delegate" destination="Xhg-7t-dfF" id="09Y-vl-RJl"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="愿望" id="zA3-fJ-TVW"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vW9-Ji-Yyb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="877" y="1073"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
