--- a/YouBest/YouBest.storyboard
+++ b/YouBest/YouBest.storyboard
@@ -127,17 +127,16 @@
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" id="V3h-Zv-qJL">
-                            <button key="customView" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="clip" id="8Xy-OT-iHp">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="clip" id="8Xy-OT-iHp">
                                 <rect key="frame" x="233" y="5" width="71" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="-2" minY="0.0" maxX="2" maxY="0.0"/>
                                 <state key="normal" title="123" image="coin_16.png">
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
-                                <state key="highlighted" image="coin_16.png">
-                                    <color key="titleColor" red="0.79838389158248901" green="0.89016056060791016" blue="0.99951565265655518" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                                <state key="highlighted" image="coin_16.png"/>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -148,6 +147,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
+                        <outlet property="navigationItemRightButton" destination="8Xy-OT-iHp" id="REc-da-NH1"/>
                         <segue destination="yW6-1q-jsq" kind="relationship" relationship="viewControllers" id="lpf-kl-5ZJ"/>
                         <segue destination="yW6-1q-jsq" kind="relationship" relationship="viewControllers" id="x3l-1V-Bjh"/>
                         <segue destination="yW6-1q-jsq" kind="relationship" relationship="viewControllers" id="lKX-Pe-FeY"/>
